Fixed overflow at bottom of screen

--- a/src/css/home-styles.css
+++ b/src/css/home-styles.css
@@ -9,7 +9,7 @@
     background-image: url('wallpaperflare.com_wallpaper.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .title_container{
